# llm-gateway

./: .dockerignore  .gitignore  .ruff.toml  AGENTS.md  ARCHITECTURE.md  README.md  Taskfile.yml  alembic.ini  constraints.txt  docker-compose.integration-test.yml  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
app/: examples.py  internal_model_tools.py  internal_transport.py  main.py  outbound_tls.py  serve.py  target_types.py
deployments/: Dockerfile.gateway  Dockerfile.mock-auth  Dockerfile.mock-mcp  start-mock-mcp.sh
docs/: AGENT_HANDOFF.md  DESIGN.md  DEVELOPMENT.md  OPERATIONS.md  PLANS.md  QUALITY_SCORE.md  RELIABILITY.md  index.md  security-model.md
scripts/: check-contracts.py  check-harness.py  check-python-version.py  seed_db.py
test/: mock_auth_server.py  mock_mcp_server.py  test_agent_scope_claims.py  test_anthropic_adapter.py  test_approval_receipts.py  test_auth_service_token.py  test_canonical_json.py  test_catalog_adapter.py  test_catalog_endpoint_configuration.py  test_catalog_source_lifecycle.py  test_config_settings.py  test_crypto.py  test_db_secret_store.py  test_gemini_adapter.py  test_health.py  test_jwks.py  test_jwt_validator_service.py  test_llm_adapter_registry.py  test_llm_provider_admin.py  test_llm_stream.py  test_mcp_admin_tools.py  test_mcp_connections.py  test_mcp_egress_policy.py  test_mcp_endpoint_contract.py  test_mcp_pat_connections.py  test_mcp_registry_store.py  test_mcp_tool_identity.py  test_mcp_transport.py  test_openai_adapter.py  test_seed_db.py  (+13 more)
(+109 files in other folders)
