[project]
name = "llm-gateway"
version = "0.0.1-experimental.3"
description = "Production LLM Gateway for inference proxying and MCP tool brokering"
requires-python = ">=3.12.11,<3.13"
authors = [
    { name = "AcornOps" }
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "redis>=5.0.1",
    "httpx>=0.26.0",
    "mcp==1.28.1",
    "pyjwt[crypto]>=2.13.0",
    "cryptography>=42.0.0",
    "google-genai>=2.3.0",
    "openai>=2.35.1",
    "anthropic>=0.17.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "tenacity>=8.2.3",
    "jsonschema>=4.21.1",
    "python-dotenv>=1.0.1",
    "rfc8785>=0.1.4,<0.2"
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "respx>=0.20.2",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "aiosqlite>=0.20.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["test"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app"]
